<resources>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="app_name">TriumphTree</string>
    <string name="pine">Pine</string>
    <string name="birch">Birch</string>
    <string name="maple">Maple</string>
    <string name="oak">Oak</string>
    <string name="new_goal">New Goal</string>
    <string name="name">Name</string>
    <string name="finish">Finish</string>
    <string name="description">Description</string>
    <string name="upload_frequency">Upload Frequency</string>
    <string name="connections">Connections</string>
    <string name="goal_settings">Goal Settings</string>
    <string name="apply_changes">Apply Changes</string>
    <string name="off">Off</string>
    <string name="reminders">Reminders</string>
    <string name="log_history">Log History</string>
    <string name="completion_threshold">Completion Threshold</string>
    <string-array name="frequency_array">
        <item>Every six hours</item>
        <item>Daily</item>
        <item>Every other day</item>
        <item>Weekly</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="goal_list">Goal List</string>
    <string name="home_page">Home Page</string>
    <string name="add_progress">Add Progress</string>
    <string name="delete_goal">Delete Goal</string>
    <string name="sync_your_goals_with_these_third_party_applications">Sync your goals with these third-party applications</string>
    <string name="notification_frequency">Notification Frequency</string>
    <string name="my_goals">My Goals</string>
    <string name="triumph_tree">Triumph Tree</string>
    <string name="tutorial">Tutorial</string>
    <string name="how_to_add_a_new_goal">How to add a new goal</string>
    <string name="_1_navigate_to_the_sidebar">1. Navigate to the sidebar</string>
    <string name="_2_press_on_the_new_goal_button">2. Press on the \'New Goal\' Button</string>
    <string name="_3_input_your_goal_information">3. Input your goal information</string>
    <string name="_4_voila_you_have_a_new_goal">4. Voila! You have a new goal 😊</string>r
</resources>