<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".GoalSettings">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/goal_settings"
        style="@style/TitleTheme"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="70dp"/>

    <Button
        android:id="@+id/finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="230dp"
        android:layout_marginTop="20dp"
        android:text="@string/apply_changes"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        style="@style/RegularText"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="140dp"/>

    <EditText
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="90dp"
        android:layout_marginTop="135dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        style="@style/RegularText"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="220dp"/>

    <EditText
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="140dp"
        android:layout_marginTop="215dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reminders"
        style="@style/RegularText"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="300dp"/>

    <androidx.appcompat.widget.SwitchCompat
        android:id="@+id/on_off_switch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/off"
        android:layout_marginHorizontal="50dp"
        android:layout_marginTop="330dp"/>

    <Spinner
        android:id="@+id/notification_frequency"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="43dp"
        android:layout_marginTop="370dp"
        android:visibility="gone"/>

</RelativeLayout>