<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:padding="50dp"
    android:background="@android:color/white">

    <TextView
        android:id="@+id/titleTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/how_to_add_a_new_goal"
        android:textColor="@android:color/black"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_centerHorizontal="true"/>

    <TextView
        android:id="@+id/step1TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/titleTextView"
        android:layout_marginTop="16dp"
        android:text="@string/_1_navigate_to_the_sidebar"
        android:textColor="@android:color/black"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/step2TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/step1TextView"
        android:layout_marginTop="16dp"
        android:text="@string/_2_press_on_the_new_goal_button"
        android:textColor="@android:color/black"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/step3TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/step2TextView"
        android:layout_marginTop="16dp"
        android:text="@string/_3_input_your_goal_information"
        android:textColor="@android:color/black"
        android:textSize="16sp"/>

    <TextView
        android:id="@+id/step4TextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/step3TextView"
        android:layout_marginTop="16dp"
        android:text="@string/_4_voila_you_have_a_new_goal"
        android:textColor="@android:color/black"
        android:textSize="16sp"/>

</RelativeLayout>
