<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewGoal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/new_goal"
        style="@style/TitleTheme"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="70dp"/>

    <Button
        android:id="@+id/finish_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="300dp"
        android:layout_marginTop="20dp"
        android:text="@string/finish"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/name"
        style="@style/RegularText"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="140dp"/>

    <EditText
        android:id="@+id/name_edit_text"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="90dp"
        android:layout_marginTop="135dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/description"
        style="@style/RegularText"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="220dp"/>

    <EditText
        android:id="@+id/description_edit_text"
        android:layout_width="180dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="140dp"
        android:layout_marginTop="215dp" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/completion_threshold"
        style="@style/RegularText"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="300dp"/>

    <EditText
        android:layout_width="70dp"
        android:layout_height="40dp"
        android:layout_marginHorizontal="250dp"
        android:layout_marginTop="295dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/upload_frequency"
        style="@style/RegularText"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="390dp"/>

    <Spinner
        android:id="@+id/frequency_button"
        android:layout_width="240dp"
        android:layout_height="30dp"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="430dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/connections"
        style="@style/RegularText"
        android:layout_marginHorizontal="20dp"
        android:layout_marginTop="480dp"/>
    
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/sync_your_goals_with_these_third_party_applications"
        style="@style/DescriptionText"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="520dp"/>

    <ImageButton
        android:id="@+id/spotify_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/fitbit"
        android:layout_marginHorizontal="40dp"
        android:layout_marginTop="570dp"/>

    <ImageButton
        android:id="@+id/strava_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/strava"
        android:layout_marginHorizontal="160dp"
        android:layout_marginTop="570dp"/>

    <ImageButton
        android:id="@+id/duolingo_button"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:background="@drawable/duolingo"
        android:layout_marginHorizontal="280dp"
        android:layout_marginTop="570dp"/>


</RelativeLayout>