<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center_vertical"
    >

    <GridLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:columnCount="2"
        android:orientation="horizontal"
        android:layout_centerHorizontal="true"
        android:layout_margin="10dp">

        <TextView
            android:id="@+id/pine_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/pine"
            android:textSize="@dimen/_36sp"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/birch_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/birch"
            android:textSize="@dimen/_36sp"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/maple_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/maple"
            android:textSize="@dimen/_36sp"
            android:textAlignment="center"/>
        <TextView
            android:id="@+id/oak_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/oak"
            android:textSize="@dimen/_36sp"
            android:textAlignment="center"/>

    </GridLayout>
</RelativeLayout>
